[package]
name = "wasm-spectrogram"
version = "0.1.0"
edition = "2021"
description = "wasm-based spectrogram generation"
repository = "https://github.com/EmNudge/rust-wasm-spectrogram"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustfft = { version = "6.2.0", features = ["wasm_simd"]}
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"
